--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
   </head>
   <body>
     <div class="container">
+      <aside class="tool-box">
+        <button>PICKAXE</button>
+        <button>SHOVEL</button>
+        <button>AXE</button>
+        <button>inventory</button>
+      </aside>
     </div>
   </body>
 </html>
