create listeners for the board and toolds

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   <body>
     <div class="container">
       <aside class="tool-box">
-        <button>PICKAXE</button>
-        <button>SHOVEL</button>
-        <button>AXE</button>
+        <button tool="pickaxe" class="tools">PICKAXE</button>
+        <button tool="shovel" class="tools">SHOVEL</button>
+        <button tool="axe" class="tools">AXE</button>
         <button>inventory</button>
       </aside>
     </div>
