add tool box to html

--- a/index.html
+++ b/index.html
@@ -10,10 +10,18 @@
   </head>
   <body>
     <div class="container">
-      <aside class="tool-box">
-        <button tool="pickaxe" class="tools">PICKAXE</button>
-        <button tool="shovel" class="tools">SHOVEL</button>
-        <button tool="axe" class="tools">AXE</button>
+      <aside class="active-box">
+        <div class="tool-box">
+          <button tool="pickaxe" class="tools">
+            <img src="./assets/images/Pickaxe.png" alt="pickaxe-image">
+          </button>
+          <button tool="shovel" class="tools">
+            <img src="./assets/images/Shovel.png" alt="shovel-image">
+          </button>
+          <button tool="axe" class="tools">
+            <img src="./assets/images/Axe.png" alt="axe-image">
+          </button>
+        </div>
         <button>inventory</button>
       </aside>
     </div>
