update listenres of the tools to work

--- a/index.html
+++ b/index.html
@@ -12,17 +12,11 @@
     <div class="container">
       <aside class="active-box">
         <div class="tool-box">
-          <button tool="pickaxe" class="tools">
-            <img src="./assets/images/Pickaxe.png" alt="pickaxe-image">
-          </button>
-          <button tool="shovel" class="tools">
-            <img src="./assets/images/Shovel.png" alt="shovel-image">
-          </button>
-          <button tool="axe" class="tools">
-            <img src="./assets/images/Axe.png" alt="axe-image">
-          </button>
+          <button tool="pickaxe" class="tools"></button>
+          <button tool="shovel" class="tools"></button>
+          <button tool="axe" class="tools"></button>
         </div>
-        <button>inventory</button>
+        <button class="inventory"></button>
       </aside>
     </div>
   </body>
