fix isAttachedToOak function bug

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
   <body>
     <div class="container">
       <aside class="active-box">
+        <section class="status">
+          <p class="timer"></p>
+          <p class="score"></p>
+        </section>
         <div class="tool-box">
           <button tool="pickaxe" class="tools"></button>
           <button tool="shovel" class="tools"></button>
