--- a/index.html
+++ b/index.html
@@ -10,11 +10,14 @@
   </head>
   <body>
     <div class="container">
+      <aside class="status">
+        <div class="status-box">
+          <p class="timer">01:00</p>
+          <p class="score">Score: 0</p>
+          <p class="comment"></p>
+        </div>
+      </aside>
       <aside class="active-box">
-        <section class="status">
-          <p class="timer"></p>
-          <p class="score"></p>
-        </section>
         <div class="tool-box">
           <button tool="pickaxe" class="tools"></button>
           <button tool="shovel" class="tools"></button>
