added description, game rules and meta tags

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MineCraft</title>
+    <meta name="description" content="A 2D arcade game inspired by minecraft.">
+    <meta name="keywords" content="minecraft, game, 2d, arcade">
+    <meta name="author" content="Daniel Shamir">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron&family=Pacifico&display=swap" rel="stylesheet"> 
@@ -15,9 +18,14 @@
     <main class="opening">
       <section class="menu">
         <button type="button" class="play">Play</button>
-        <button type="button" class="play">Settings</button>
+        <button type="button" class="settings">Settings</button>
         <details class="description">
-          <p>...</p>
+          <summary>Description</summary>
+            <p>Minecraft is a 2D game where users can create their own worlds and experiences, using building blocks, resources discovered on the site and their own creativity.</p>
+        </details>
+        <details class="game-rules">
+          <summary>Game Rules</summary>
+            <p>In order to pass a stage you must arrange the minerals so that grass is above dirt, oak above grass, leaves attached to oak and rocks on the grass.</p>
         </details>
       </section>
     </main>
